--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "./node_modules/.bin/mocha --reporter spec test/*.js"
   },
   "dependencies": {
     "express": "3.2.4",
     "jade": "*",
     "stylus": "*"
   },
-  "dev-dependencies": {
-    "supervisor": "*"
+  "devDependencies": {
+    "supervisor": "*",
+    "mocha": "*"
   }
 }
