--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "express": "3.2.4",
     "jade": "*",
-    "stylus": "*"
+    "stylus": "*",
+    "socket.io": "*"
   },
   "devDependencies": {
     "supervisor": "*",
