--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -3,8 +3,8 @@ server {
     listen       notablemind.local:80;
     server_name  notablemind.local;
 
-    include root.conf;
-    try_files $uri @node;
+    include notablemind-root.conf;
+    try_files $uri $uri/ @node;
 
     location @node {
         proxy_pass http://localhost:3000;
