--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "express": "3.2.4",
     "jade": "*",
     "stylus": "*",
-    "socket.io": "*"
+    "socket.io": "*",
+    "org-lite": "0.0.0",
+    "bson": "~0.1.9"
   },
   "devDependencies": {
     "supervisor": "*",
