--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "stylus": "*",
     "socket.io": "*",
     "org-lite": "0.0.0",
-    "bson": "~0.1.9"
+    "bson": "~0.1.9",
+    "component-builder": "~0.8.2",
+    "component-stylus": "~1.1.3"
   },
   "devDependencies": {
     "supervisor": "*",
