adding settings! super awesome

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -4,9 +4,9 @@ server {
     server_name  notablemind.local;
 
     include notablemind-root.conf;
-    try_files $uri $uri/ @node;
+    try_files $uri $uri/ /index.html;
 
-    location @node {
+    location /json {
         proxy_pass http://localhost:3000;
     }
 }
