yes settings loading works!

--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"note:nav.movementStyle":"flat","note:nav.goUp":"up|ctrl E","note:nav.goDown":"down|ctrl D","note:nav.moveUp":"alt up|alt W","note:nav.moveDown":"alt down|alt S","note:nav.moveLeft":"alt left|alt A","note:nav.moveRight":"alt right|alt D","note:nav.editTags":"ctrl space"}
+{"note:nav.movementStyle":"org","note:nav.goUp":"up|ctrl E","note:nav.goDown":"down|ctrl D","note:nav.moveUp":"alt up|alt W","note:nav.moveDown":"alt down|alt S","note:nav.moveLeft":"alt left|alt A","note:nav.moveRight":"alt right|alt D","note:nav.editTags":"ctrl space"}
