--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "memmify": "*",
     "component": "*",
     "component-builder": "~0.8.2",
-    "component-stylus": "~1.1.3"
+    "component-stylus": "~1.1.3",
+    "debug": "~0.7.2"
   },
   "devDependencies": {
     "supervisor": "*",
     "mocha": "*",
     "chai": "*",
-    "wrench": "*"
+    "wrench": "*",
+    "jshint": "~2.1.10"
   }
 }
